syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform {
    rpc GetAllPlatforms (GetAllRequest) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatformModel{
    int32 platformId = 1;
    string platformName = 2;
    string manufacturer = 3;
}

message PlatformResponse {
    repeated GrpcPlatformModel platform = 1;
}

